<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza puede saltar solo una pieza.</string>
    <string name="firstCategoryPrefTitle">Datos personales</string>
    <string name="editTextPrefTitle">Nombre del jugador</string>
    <string name="editTextPrefSummary">Pulse para teclear el nombre del jugador</string>
    <string name="secondCategoryPrefTitle">Ajustes del juego</string>
    <string name="preferencesText">Ajustes</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Quiere jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Diálog Reiniciar -->
    <string name="reinitializeText">Reiniciar</string>
    <string name="reinitializeDialogText">¿Desea reiniciar la partida?</string>

    <!-- Guardar -->
    <string name="saveText">Guardar</string>
    <string name="defaultSaveFile">solitarioCelta.save</string>
    <string name="savedGameText">Partida guardada</string>

    <!-- Diálog Recuperar -->
    <string name="restoreText">Recuperar partida</string>
    <string name="restoreDialogText">¿Desea recuperar la partida?</string>

    <!-- Mejores Resultados -->
    <string name="bestResultsText">Mejores resultados</string>
    <string name="tokensHeader">Fichas</string>
    <string name="dateHeader">Fecha</string>
    <string name="playerNameHeader">Jugador</string>
    <string name="cleanResultsButtonText">Limpiar resultados</string>
    <string name="cleanGameResultsDialogText">¿Desea eliminar los resultados de las partidas?</string>

    <string name="preferencesKeyPlayerName">KEY_PLAYER_NAME</string>


</resources>