<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:background="@android:color/darker_gray"
        android:text="@string/tokensHeader"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:background="@android:color/darker_gray"
        android:text="@string/playerNameHeader"
        android:textSize="20sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="40"
        android:background="@android:color/darker_gray"
        android:text="@string/dateHeader"
        android:textSize="20sp" />

</LinearLayout>